--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #logging.level.org.springframework=DEBUG
+#logging.level.org.springframework.security=DEBUG
+
+#server.servlet.session.timeout=10
+#server.servlet.session.cookie.max-age=10
+server.servlet.session.tracking-modes=cookie
+
 
 spring.jpa.hibernate.ddl-auto=create
 
